JS program to convert a number to roman numerals

--- a/html/roman-numeral.html
+++ b/html/roman-numeral.html
@@ -11,7 +11,7 @@
 </head>
 
   <body>
-    <h2>Convert A Number To Roman Numeral</h2>
+    <h2>Convert A Number To Roman Numerals</h2>
     <div class="number">
       <label> Enter any number: </label> <br />
       <br />
