--- a/html/roman-numeral.html
+++ b/html/roman-numeral.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Hellen N">
     <title> JS Roman Numeral Converter</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../style.css">
   
 </head>
 
@@ -20,6 +20,6 @@
       <button id="btn" type="button" onclick="convertToRoman()">Convert</button>
     </div>  
 
-    <script src="../js/script.js"></script>
+    <script src="../script.js"></script>
   </body>
 </html>
